...
        dateString = "12/12 - 9:22",
        commentsUrl = null,
    ),
)

internal val browsersForPreview = listOf(
    Browser(
        id = "",
        name = "Chrome",
        isFavourite = false
    ),
    Browser(
        id = "",
        name = "Firefox",
        isFavourite = true
...
